2022年3月21日 Mybatis复习

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
 <!--    servlet标签给Tomcat配置Servlet程序-->
     <servlet>
 <!--        servlet-name标签：给Servlet程序起一个别名（一般是类名）-->
@@ -65,6 +66,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>ContextServlet</servlet-name>
-        <url-pattern>com.lzr.servlet.ContextServlet</url-pattern>
+        <url-pattern>/contentServlet</url-pattern>
     </servlet-mapping>
 </web-app>
