2022年3月21日 Mybatis复习

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -105,7 +105,7 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>HelloServletWoniu3</servlet-name>
-        <servlet-class>com.lzr.servlet.HelloServletWoniu3</servlet-class>
+        <servlet-class>com.lzr.servlet.CategoryServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>HelloServletWoniu3</servlet-name>
